--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -637,6 +637,7 @@ ul.frm_form_nav > li {
 	gap: var(--gap-sm);
 	align-items: center;
 	text-align: left;
+	min-width: 200px;
 }
 
 #frm_top_bar h1 span {
