Change `frm-page-skeleton-grid-layout` to `frm-list-grid-layout`

--- a/css/admin/addons-page.css
+++ b/css/admin/addons-page.css
@@ -13,7 +13,7 @@
 	display: none;
 }
 
-.frm-page-skeleton-grid-layout {
+.frm-list-grid-layout {
 	grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
 }
 
