--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -1809,6 +1809,10 @@ input.frm_insert_in_template {
 	display: flex;
 }
 
+#wpbody-content .frm-inline-flex {
+	display: inline-flex;
+}
+
 .frm_hidden,
 .js .frm-hide-js {
 	display: none;
@@ -1874,6 +1878,10 @@ input.frm_insert_in_template {
 	align-items: center;
 }
 
+#wpbody-content .frm-flex-wrap {
+	flex-wrap: wrap;
+}
+
 .frm-transition-ease {
 	transition: all .2s ease;
 }
@@ -1910,6 +1918,7 @@ input.frm_insert_in_template {
 /* End Generic Classes, Start Forced Generic Classes */
 
 .frm-fields p > label.frm_hidden,
+#wpbody-content label.frm_hidden,
 .frm-lookup-modal .dismiss,
 .frm-right-panel .inside a.frm_hidden,
 #form_global_settings .frm_hidden,
