--- a/css/admin/frm_admin_global.css
+++ b/css/admin/frm_admin_global.css
@@ -7,3 +7,18 @@
 	font-size: 9px;
 	vertical-align: middle;
 }
+
+.frm-meta-tag.frm-new-pill {
+	background-color: #12b76a;
+    vertical-align: text-bottom;
+}
+
+.frm-meta-tag,
+.frm-meta-tag:hover {
+	padding: 4px 8px;
+    border-radius: 8px;
+    font-weight: 600;
+    display: inline-flex;
+    background-color: #D9EBFF;
+    gap: 2px;
+}
