fix the draggable getting stuck at 0 in slider components, add get and set cookies methods in frmDom.util, show text squish warning  modal every 30min, primary color - include the submit border color in will-change list, add transition effect on tabs, eslint fix, phpcs fixes, clean up some js and organize better js files, added few more commpents on newly created js clases

--- a/css/admin/style-components.css
+++ b/css/admin/style-components.css
@@ -436,6 +436,9 @@
 	margin-top: var(--gap-md);
 	height: 100%;
 }
+.frm-style-tabs-wrapper .frm-tabs-container .frm-tabs-slide-track {
+	transition: 0.32s transform cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
 .frm-style-tabs-wrapper .frm-tabs-slide-track > div {
 	flex: 0 0 100%;
 	opacity: 0.0;
