--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -2977,6 +2977,7 @@ body.frm-body-with-open-modal {
 
 .frm-meta-tag.frm-new-pill {
 	background-color: var(--success-500);
+	vertical-align: text-bottom;
 }
 
 /* Start entry statuses */
