Stop using font icons for form actions collapsible

--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -5521,6 +5521,10 @@ h2.frm-h2,
 	outline: 0;
 }
 
+#frm_notification_settings .widget-top .widget-action{
+	padding-top: 13.5px;
+}
+
 #frm_email_addon_menu {
 	border: 1px solid var(--grey-300);
 	padding: var(--gap-sm);
@@ -6798,6 +6802,14 @@ li.selected .divider_section_only:before {
 
 .open .widget-top .frm_arrow_right_icon:before {
 	content: '\e62a';
+}
+
+.open .widget-top .widget-title-action button svg {
+	transform: rotate(90deg);
+}
+
+.widget-top .widget-title-action button svg use {
+	color: var(--grey);
 }
 
 .frm-collapsed + .frm-collapse-me {
