add auto option for sliders, fix the style radio buttons to take the default value by moving the tracker, expand the sliders to be actioned on click, save style form when going back to quick settings, added new 2 z-index classnames, includes style fixes and improvements on tabs, image upload icon, missing arrow on color picker elements, removed the grey background showing after accordions are closed, improved the cursor UX on sliders

--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -112,6 +112,12 @@
 .frm-margin-top-xl {
 	margin-top: var(--gap-xl);
 }
+.frm-sm-z-index {
+	z-index: 1;
+}
+.frm-md-z-index {
+	z-index: 5;
+}
 .frm-white-body,
 .frm-white-body p,
 .frm_wrap,
@@ -1901,6 +1907,9 @@ input.frm_insert_in_template {
 
 .frm-text-right {
 	text-align: right;
+}
+.frm-text-center {
+	text-align: center;
 }
 
 .frm-border-b {
