--- a/css/admin/style-components.css
+++ b/css/admin/style-components.css
@@ -1,19 +1,47 @@
-.frm-right-panel  .frm-style-component .wp-picker-container {
-	max-width: 216px;
+.formidable_page_formidable-styles .frm_tooltip_icon {
+	line-height: 12px;
+	height: 12px;
 }
-.frm-right-panel  .frm-style-component .wp-picker-container button {
+.formidable_page_formidable-styles.js .control-section .accordion-section-title:focus {
+	background: none;
+}
+.formidable_page_formidable-styles .frm-right-panel .accordion-section-title svg.frmsvg:nth-child(1) {
+	width: 24px;
+	height: 24px;
+}
+.formidable_page_formidable-styles .frm-right-panel h3.accordion-section-title:hover > svg:last-child,
+.formidable_page_formidable-styles .frm-right-panel .open h3.accordion-section-title > svg:first-child,
+.formidable_page_formidable-styles .frm-right-panel .open h3.accordion-section-title > svg:last-child {
+	color: var( --grey-900 );
+}
+
+.formidable_page_formidable-styles .frm-right-panel  .frm-style-component .wp-picker-container button {
 	position: relative;
 	height: 36px !important;
 	background-image: none !important;
 	background-color: white !important;
 	overflow: hidden;
 }
-.frm-right-panel .frm-style-component .wp-color-result-text {
+.formidable_page_formidable-styles .frm-right-panel .frm-style-component .wp-picker-container:after {
+	content: '';
+	width: 20px;
+	height: 20px;
+	display: block;
+	position: absolute;
+	top: 0;
+	right: 8px;
+	bottom: 0; 
+	margin: auto;
+	background: url('../../images/style/small-arrow.svg') no-repeat;
+	background-position: center;
+	z-index: 10;
+}
+.formidable_page_formidable-styles .frm-right-panel .frm-style-component .wp-color-result-text {
 	line-height: 36px !important;
 	padding: 0px 12px;
 	border: 0px;
 }
-.frm-right-panel  .frm-style-component .color-alpha {
+.formidable_page_formidable-styles .frm-right-panel  .frm-style-component .color-alpha {
 	width: 20px !important;
 	height: 20px !important;
 	border-radius: 50% !important;
@@ -24,19 +52,21 @@
 	margin: auto;
 	margin-left: 12px;
 }
-.frm-right-panel  .frm-style-component .wp-picker-input-wrap input {
+.formidable_page_formidable-styles .frm-right-panel  .frm-style-component .wp-picker-input-wrap input {
 	width: calc( 100% - 10px ) !important;
 	margin: 1px 5px;
 	height: 32px;
 	line-height: 32px;
 }
-.frm-right-panel .frm-style-component.frm-background-image > div {
+.formidable_page_formidable-styles .frm-right-panel .frm-style-component.frm-background-image > div {
 	max-width: 216px;
 }
-.frm-right-panel .frm-style-component.frm-background-image .wp-picker-container {
+.formidable_page_formidable-styles .frm-right-panel .frm-style-component.frm-background-image .wp-picker-container {
 	max-width: calc( 100% - 44px );
+	position: relative;
 }
-.frm-right-panel .frm-style-component.frm-background-image button.frm_choose_image_box {
+
+.formidable_page_formidable-styles .frm-right-panel .frm-style-component.frm-background-image button.frm_choose_image_box {
 	width: 36px;
 	height: 36px;
 	padding: 0px;
@@ -49,14 +79,11 @@
 	justify-content: center;
 	border: none;
 }
-.frm-right-panel .frm-style-component.frm-background-image button.frm_choose_image_box svg {
-	display: block;
-	width: 16px;
-}
-.frm-right-panel .frm-style-component.frm-background-image  .frm_image_styling_frame {
+
+.formidable_page_formidable-styles .frm-right-panel .frm-style-component.frm-background-image  .frm_image_styling_frame {
 	margin-left: 0px;
 }
-.frm-right-panel .frm-style-component.frm-background-image .frm_image_preview_wrapper {
+.formidable_page_formidable-styles .frm-right-panel .frm-style-component.frm-background-image .frm_image_preview_wrapper {
 	position: relative;
 	width: 36px;
 	height: 36px;
@@ -66,13 +93,13 @@
 	overflow: hidden;
 	box-sizing: border-box;
 }
-.frm-right-panel .frm-style-component.frm-background-image .frm_image_preview_wrapper .frm_image_preview_frame {
+.formidable_page_formidable-styles .frm-right-panel .frm-style-component.frm-background-image .frm_image_preview_wrapper .frm_image_preview_frame {
 	max-width: 120%;
 	height: 120%;
 	margin: -10%;
 	position: relative;
 }
-.frm-right-panel .frm-style-component.frm-background-image .frm_image_data {
+.formidable_page_formidable-styles .frm-right-panel .frm-style-component.frm-background-image .frm_image_data {
 	position: absolute;
 	left: 0;
 	top: 0;
@@ -82,7 +109,7 @@
 	margin: 0px;
 	border-radius: var(--small-radius);
 }
-.frm-right-panel .frm-style-component.frm-background-image .frm_remove_image_option {
+.formidable_page_formidable-styles .frm-right-panel .frm-style-component.frm-background-image .frm_remove_image_option {
 	width: 100%;
 	height: 100%;
 	border: 1px solid red;
@@ -91,7 +118,7 @@
 	top: 0;
 	left: 0;
 }
-.frm-right-panel .frm-style-component.frm-background-image .frm_remove_image_option:before {
+.formidable_page_formidable-styles .frm-right-panel .frm-style-component.frm-background-image .frm_remove_image_option:before {
 	opacity: 0.0;
 	content: '';
 	display: block;
@@ -103,7 +130,7 @@
 	left: 0;
 	background: rgba( 255, 255, 255, 0.8 );
 }
-.frm-right-panel .frm-style-component.frm-background-image .frm_remove_image_option:after {
+.formidable_page_formidable-styles .frm-right-panel .frm-style-component.frm-background-image .frm_remove_image_option:after {
 	opacity: 0.0;
 	content: '';
 	display: block;
@@ -116,23 +143,23 @@
 	background: url( '../../images/style/close.svg' ) no-repeat;
 	background-position: center;
 }
-.frm-right-panel .frm-style-component.frm-background-image .frm_remove_image_option:hover:before,
-.frm-right-panel .frm-style-component.frm-background-image .frm_remove_image_option:hover:after {
+.formidable_page_formidable-styles .frm-right-panel .frm-style-component.frm-background-image .frm_remove_image_option:hover:before,
+.formidable_page_formidable-styles .frm-right-panel .frm-style-component.frm-background-image .frm_remove_image_option:hover:after {
 	opacity: 1.0;
 }
 
-.frm-right-panel .frm-style-component.frm-background-image .frm_image_preview_wrapper .frm_image_preview_frame .frm_image_styling_frame,
-.frm-right-panel .frm-style-component.frm-background-image .frm_image_preview_wrapper .frm_image_preview_frame .frm_image_styling_frame img {
+.formidable_page_formidable-styles .frm-right-panel .frm-style-component.frm-background-image .frm_image_preview_wrapper .frm_image_preview_frame .frm_image_styling_frame,
+.formidable_page_formidable-styles .frm-right-panel .frm-style-component.frm-background-image .frm_image_preview_wrapper .frm_image_preview_frame .frm_image_styling_frame img {
 	width: 100%;
 	height: 100%;
 }
 
-.frm-right-panel .frm-style-component.frm-background-image .frm_image_preview_wrapper + * {
+.formidable_page_formidable-styles .frm-right-panel .frm-style-component.frm-background-image .frm_image_preview_wrapper + * {
 	display: none;
 }
-.frm-right-panel .frm-style-component.frm-background-image .frm_image_preview_wrapper .frm_image_preview_title,
-.frm-right-panel .frm-style-component.frm-background-image .frm_bg_image_additional_settings,
-.frm-right-panel .frm-style-component.frm-background-image .frm_remove_image_option * {
+.formidable_page_formidable-styles .frm-right-panel .frm-style-component.frm-background-image .frm_image_preview_wrapper .frm_image_preview_title,
+.formidable_page_formidable-styles .frm-right-panel .frm-style-component.frm-background-image .frm_bg_image_additional_settings,
+.formidable_page_formidable-styles .frm-right-panel .frm-style-component.frm-background-image .frm_remove_image_option * {
 	display: none;
 }
 
@@ -145,6 +172,9 @@
 	box-sizing: border-box;
 	border-radius: var(--small-radius);
 	position: relative;
+}
+.frm-style-component.frm-field-shape .frm-radio-container {
+	max-width: unset;
 }
 .frm-style-component.frm-direction-component .frm-radio-container {
 	gap: var(--gap-xs);
@@ -166,6 +196,9 @@
 	z-index: 1;
 	transition: 0.35s transform cubic-bezier(0.075, 0.82, 0.165, 1);
 }
+.frm-style-component.frm-field-shape .frm-radio-container .frm-radio-active-tracker {
+	width: 23%;
+}
 .frm-style-component.frm-align-component.frm-2-options .frm-radio-container .frm-radio-active-tracker,
 .frm-style-component.frm-direction-component .frm-radio-container .frm-radio-active-tracker {
 	width: calc( 50% - var(--gap-xs) );
@@ -181,10 +214,14 @@
 	position: relative;
 	z-index: 2;
 }
+.frm-style-component.frm-field-shape .frm-radio-container > label {
+	width: 23%;
+}
 .frm-style-component.frm-align-component.frm-2-options .frm-radio-container > label,
 .frm-style-component.frm-direction-component .frm-radio-container > label {
 	width: 50%;
 }
+.frm-style-tabs-wrapper .frm-tabs-navs ul > li:not(.frm-active):hover,
 .frm-style-component .frm-radio-container input:not(:checked) + label:hover {
 	background: rgba( 234, 236, 240, 1 );
 	border-radius: var(--small-radius);
@@ -193,6 +230,7 @@
 .frm-style-component .frm-radio-container input {
 	display: none;
 }
+
 .frm-style-component .frm-slider-container {
 	width: calc( 100% - 91px );
 	display: flex;
@@ -229,7 +267,7 @@
 	height: 16px;
 	border-radius: 50%;
 	transform: translatex( 15px );
-	cursor: pointer;
+	cursor: grab;
 	right: 0; top: 0; bottom: 0;
 	margin: auto;
 }
@@ -280,12 +318,12 @@
 	content: '';
     position: absolute;
     display: block;
-    width: 340%;
-    height: 250%;
+    width: 180%;
+    height: 200%;
     border-radius: 50%;
     left: 0;
     top: 0;
-    transform: translate(-36%, -30%);
+    transform: translate(-24%, -24%);
 }
 .frm-style-component .frm-slider-value {
 	width: 86px;
@@ -325,12 +363,23 @@
 	height: 4px;
 	background: rgba(234, 236, 240, 1);
 	border-radius: 200px;
+	cursor: pointer;
 }
 .frm-slider-component .frm-independent-slider-field {
 	margin-top: 10px;
 }
 .frm-style-component .frm-slider-component.frm-has-multiple-values {
 	margin-bottom: 10px;
+}
+.frm-slider-component.frm-disabled .frm-slider-container {
+	pointer-events: none;
+	opacity: 0.5;
+}
+.frm-slider-component.frm-disabled .frm-slider-value input[type="text"] {
+	width: 28px;
+}
+.frm-slider-component.frm-disabled .frm-slider-value select {
+	width: 56px;
 }
 
 .frm-tabs-wrapper {
@@ -385,14 +434,15 @@
 	cursor: pointer;
 	margin-bottom: 0px;
 	text-align: center;
-	height: 44px;
-	line-height: 44px;
+	height: 28px;
+	line-height: 28px;
+	margin-top: 7px;
 }
 .frm-style-tabs-wrapper .frm-tabs-navs ul li:first-child {
-	padding-left: 10px;
+	margin-left: 4px;
 }
 .frm-style-tabs-wrapper .frm-tabs-navs ul li:last-child {
-	padding-right: 10px;
+	margin-right: 4px;
 }
 
 .frm-style-tabs-wrapper .frm-tabs-navs ul li.frm-active {
@@ -424,10 +474,10 @@
 }
 
 .frm-style-tabs-wrapper .frm-tabs-delimiter .frm-tabs-active-underline.frm-first {
-	left: 8px;
+	left: 4px;
 }
 .frm-style-tabs-wrapper .frm-tabs-delimiter .frm-tabs-active-underline.frm-last {
-	left: -8px;
+	left: -4px;
 }
 
 .frm-tabs-container {
@@ -472,7 +522,13 @@
 .frm-style-component label.frm-copy-text {
 	line-height: 32px;
 	cursor: pointer;
+	white-space: nowrap;
 }
 .frm-style-component .wp-picker-holder {
 	right: 0;
+}
+.formidable_page_formidable-styles .accordion-section-content  .frm-style-item-heading {
+	font-weight: 500;
+	font-size: var( --text-md );
+	color: var( --grey-900 );
 }
