Replace font icons with SVGs for edd license status

--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -5204,8 +5204,16 @@ label.frm-example-icon {
 	margin: 0 5px;
 }
 
-.edd_frm_status_icon.frm_icon_font.frm_inactive_icon {
-	color: green;
+.edd_frm_status_icon.frmsvg {
+	margin: 0;
+}
+
+.edd_frm_status_icon.frmsvg {
+	fill: #D54E21;
+}
+
+.edd_frm_status_icon.frmsvg.frm_inactive_icon {
+	fill: green;
 }
 
 /* Hide the install steps for solutions */
