--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -5204,7 +5204,7 @@ label.frm-example-icon {
 	margin: 0 5px;
 }
 
-.edd_frm_status_icon.frmsvg.frm_inactive_icon {
+.edd_frm_status_icon.frmsvg.frm_check1_icon {
 	fill: green;
 }
 
