--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -5203,11 +5203,11 @@ label.frm-example-icon {
 	margin: 0 5px;
 }
 
-.edd_frm_status_icon.frm_check1_icon {
+.edd_frm_license_row .frm_action_success .frmsvg {
 	fill: green;
 }
 
-.edd_frm_status_icon.frm_cancel1_icon {
+.edd_frm_license_row .frm_action_error .frmsvg {
 	fill: #D54E21;
 }
 
