--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -2601,9 +2601,12 @@ h2.frm-h2 + .howto {
 #wpbody-content > .update-nag,
 #wpbody-content > .notice,
 #wpbody-content > .error:not(.frm_previous_install),
+#wpbody-content > .cky-admin-notice,
 .frm-white-body .updated,
 .frm-white-body .notice,
+.frm-white-body .cky-admin-notice,
 .frm_wrap > .wrap > .notice,
+.frm_wrap > .wrap > .cky-admin-notice,
 .frm-white-body .error:not(.frm_previous_install)
 {
 	display: none;
