--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -2601,13 +2601,15 @@ h2.frm-h2 + .howto {
 #wpbody-content > .update-nag,
 #wpbody-content > .notice,
 #wpbody-content > .error:not(.frm_previous_install),
-#wpbody-content > .cky-admin-notice,
+#wpbody-content > [class*="admin-notice"],
 .frm-white-body .updated,
 .frm-white-body .notice,
-.frm-white-body .cky-admin-notice,
+.frm-white-body [class*="admin-notice"],
+.frm-white-body [class*="review-banner"],
+.frm-white-body [id$="-review-banner"],
 .frm-white-body #codepeople-review-banner,
 .frm_wrap > .wrap > .notice,
-.frm_wrap > .wrap > .cky-admin-notice,
+.frm_wrap > .wrap > [class*="admin-notice"],
 .frm-white-body .error:not(.frm_previous_install)
 {
 	display: none;
