--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -6081,6 +6081,8 @@ a.frm_add_logic_link.frm_hidden {
 	height: 13px;
 	width: 13px;
 	vertical-align: top;
+	color: #A0A0A0;
+	color: var(--grey);
 }
 
 .form-field input[type=text].frm_other_input {
