--- a/css/admin/frm_admin_global.css
+++ b/css/admin/frm_admin_global.css
@@ -11,7 +11,7 @@
 #adminmenu .frm-new-pill {
 	color: #F47449;
 	background: none;
-	margin-left: 0;
+	margin-left: 5px;
 	font-size: 85%;
 	font-weight: inherit;
 	vertical-align: unset;
