--- a/css/admin/style-components.css
+++ b/css/admin/style-components.css
@@ -1,7 +1,3 @@
-.formidable_page_formidable-styles .frm_tooltip_icon {
-	line-height: 12px;
-	height: 12px;
-}
 .formidable_page_formidable-styles.js .control-section .accordion-section-title:focus {
 	background: none;
 }
@@ -14,10 +10,10 @@
 .formidable_page_formidable-styles .frm-right-panel .open h3.accordion-section-title > svg:last-child {
 	color: var( --grey-900 );
 }
-.formidable_page_formidable-styles .frm-right-panel  .frm-style-component {
+.formidable_page_formidable-styles .frm-right-panel .frm-style-component {
 	align-self: center;
 }
-.formidable_page_formidable-styles .frm-right-panel  .frm-style-component .wp-picker-container button {
+.formidable_page_formidable-styles .frm-right-panel .frm-style-component .wp-picker-container button {
 	position: relative;
 	height: 36px !important;
 	background-image: none !important;
@@ -32,7 +28,7 @@
 	position: absolute;
 	top: 0;
 	right: 8px;
-	bottom: 0; 
+	bottom: 0;
 	margin: auto;
 	background: url('../../images/style/small-arrow.svg') no-repeat;
 	background-position: center;
@@ -43,7 +39,7 @@
 	padding: 0px 12px;
 	border: 0px;
 }
-.formidable_page_formidable-styles .frm-right-panel  .frm-style-component .color-alpha {
+.formidable_page_formidable-styles .frm-right-panel .frm-style-component .color-alpha {
 	width: 20px !important;
 	height: 20px !important;
 	border-radius: 50% !important;
@@ -54,7 +50,7 @@
 	margin: auto;
 	margin-left: 12px;
 }
-.formidable_page_formidable-styles .frm-right-panel  .frm-style-component .wp-picker-input-wrap input {
+.formidable_page_formidable-styles .frm-right-panel .frm-style-component .wp-picker-input-wrap input {
 	width: calc( 100% - 10px ) !important;
 	margin: 1px 5px;
 	height: 32px;
@@ -75,14 +71,11 @@
 	background: white;
 	overflow: hidden;
 	text-indent: -999px;
-	display: flex;
 	flex-wrap: wrap;
-	align-items: center;
-	justify-content: center;
 	border: none;
 }
 
-.formidable_page_formidable-styles .frm-right-panel .frm-style-component.frm-background-image-component  .frm_image_styling_frame {
+.formidable_page_formidable-styles .frm-right-panel .frm-style-component.frm-background-image-component .frm_image_styling_frame {
 	margin-left: 0px;
 }
 .formidable_page_formidable-styles .frm-right-panel .frm-style-component.frm-background-image-component .frm_image_preview_wrapper {
@@ -156,9 +149,7 @@
 	height: 100%;
 }
 
-.formidable_page_formidable-styles .frm-right-panel .frm-style-component.frm-background-image-component .frm_image_preview_wrapper + * {
-	display: none;
-}
+.formidable_page_formidable-styles .frm-right-panel .frm-style-component.frm-background-image-component .frm_image_preview_wrapper + *,
 .formidable_page_formidable-styles .frm-right-panel .frm-style-component.frm-background-image-component .frm_image_preview_wrapper .frm_image_preview_title,
 .formidable_page_formidable-styles .frm-right-panel .frm-style-component.frm-background-image-component .frm_bg_image_additional_settings,
 .formidable_page_formidable-styles .frm-right-panel .frm-style-component.frm-background-image-component .frm_remove_image_option * {
@@ -170,7 +161,7 @@
 	height: 36px;
 	background: rgba( 242, 244, 247, 1 );
 	gap: var(--small-gap);
-	padding: 4px;
+	padding: var(--gap-2xs);
 	box-sizing: border-box;
 	border-radius: var(--small-radius);
 	position: relative;
@@ -190,11 +181,11 @@
 	height: calc( 100% - 8px );
 	background: white;
 	border-radius: var(--small-radius);
-	box-shadow: 0px 0.47px 0.94px 0px rgba(16, 24, 40, 0.06), 0px 0.47px 1.47px 0px rgba(16, 24, 40, 0.1);
+	box-shadow: var(--button-shadow);
 	position: absolute;
-	top: 4px;
+	top: var(--gap-2xs);
 	bottom: 0;
-	left: 4px;
+	left: var(--gap-2xs);
 	z-index: 1;
 	transition: 0.35s transform cubic-bezier(0.075, 0.82, 0.165, 1);
 }
@@ -210,10 +201,8 @@
 	height: 100%;
 	margin: 0px;
 	cursor: pointer;
-	display: flex;
-	justify-content: center;
-	align-items: center;
 	position: relative;
+	display: flex;
 	z-index: 2;
 }
 .frm-style-component.frm-field-shape .frm-radio-container > label {
@@ -227,7 +216,7 @@
 .frm-style-component .frm-radio-container input:not(:checked) + label:hover {
 	background: rgba( 234, 236, 240, 1 );
 	border-radius: var(--small-radius);
-	box-shadow: 0px 0.47px 0.94px 0px rgba(16, 24, 40, 0.06), 0px 0.47px 1.47px 0px rgba(16, 24, 40, 0.1);
+	box-shadow: var(--button-shadow);
 }
 .frm-style-component .frm-radio-container input {
 	display: none;
@@ -270,7 +259,9 @@
 	border-radius: 50%;
 	transform: translatex( 15px );
 	cursor: grab;
-	right: 0; top: 0; bottom: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
 	margin: auto;
 }
 .frm-style-component .frm-slider-container .frm-slider-active-track .frm-slider-bullet .frm-slider-value-label {
@@ -325,7 +316,7 @@
 	border-radius: 50%;
 	left: 0;
 	top: 0;
-transform: translate(-24%, -24%);
+	transform: translate(-24%, -24%);
 }
 .frm-style-component .frm-slider-value {
 	width: 86px;
@@ -441,10 +432,10 @@ transform: translate(-24%, -24%);
 	margin-top: 7px;
 }
 .frm-style-tabs-wrapper .frm-tabs-navs ul li:first-child {
-	margin-left: 4px;
+	margin-left: var(--gap-2xs);
 }
 .frm-style-tabs-wrapper .frm-tabs-navs ul li:last-child {
-	margin-right: 4px;
+	margin-right: var(--gap-2xs);
 }
 
 .frm-style-tabs-wrapper .frm-tabs-navs ul li.frm-active {
@@ -472,14 +463,14 @@ transform: translate(-24%, -24%);
 	width: 45px;
 	transition: 0.4s transform cubic-bezier(0.25, 0.46, 0.45, 0.94);
 	border-radius: var(--small-radius);
-	box-shadow: 0px 0.47px 0.94px 0px rgba(16, 24, 40, 0.06), 0px 0.47px 1.47px 0px rgba(16, 24, 40, 0.1);
+	box-shadow: var(--button-shadow);
 }
 
 .frm-style-tabs-wrapper .frm-tabs-delimiter .frm-tabs-active-underline.frm-first {
-	left: 4px;
+	left: var(--gap-2xs);
 }
 .frm-style-tabs-wrapper .frm-tabs-delimiter .frm-tabs-active-underline.frm-last {
-	left: -4px;
+	left: calc( -1 * var(--gap-2xs) );
 }
 
 .frm-tabs-container {
