--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -3822,20 +3822,20 @@ input[type="checkbox"] {
 
 .frm-white-body input[type="checkbox"]:checked,
 .frm_wrap input[type="checkbox"]:checked,
-#wpbody-content input[type="checkbox"]:checked {
+body[class*="frm-admin"] #wpbody-content input[type="checkbox"]:checked {
 	background-color: var(--primary-500);
 	border-color: var(--primary-500) !important;
 }
 
 .frm-white-body input[type="checkbox"]:checked:focus,
 .frm_wrap input[type="checkbox"]:checked:focus,
-#wpbody-content input[type="checkbox"]:checked:focus {
+body[class*="frm-admin"] #wpbody-content input[type="checkbox"]:checked:focus {
 	border-color: var(--primary-500);
 }
 
 .frm-white-body input[type="checkbox"]:checked::before,
 .frm_wrap input[type="checkbox"]:checked::before,
-#wpbody-content input[type="checkbox"]:checked::before {
+body[class*="frm-admin"] #wpbody-content input[type="checkbox"]:checked::before {
 	content: '';
 	display: block;
 	width: 100% !important;
